--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^2.1.2",
     "@headlessui/tailwindcss": "^0.2.1",
     "@tremor/react": "^3.17.4",
+    "@vercel/postgres": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
