--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@tremor/react": "^3.17.4",
     "@vercel/postgres": "^0.9.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
