--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-	"rewrites": [
+	"builds": [
 		{
-			"source": "/(.*)",
-			"destination": "/"
+			"src": "api/**/*.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/api/(.*)",
+			"dest": "/api/$1"
 		}
 	]
 }
