--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-	"builds": [
+	"rewrites": [
 		{
-			"src": "api/**/*.js",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/api/(.*)",
-			"dest": "/api/$1"
+			"source": "/(.*)",
+			"destination": "/"
 		}
 	]
 }
