--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.40",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
